--- a/Aiden_Ghim_index.html
+++ b/Aiden_Ghim_index.html
@@ -47,6 +47,8 @@
                 <img id="advimg" src="https://cdn.mos.cms.futurecdn.net/VtkGQvZhCU3M7qtRnriPNZ.jpg" alt="image of telescope and night sky">
             </div>
         </section>
+
+        <!-- intro content -->
         <section id="content">
             <div class="contentbox" id="wemake">
                 <h2>What we make</h2>
@@ -104,6 +106,28 @@
                 </ul>
             </div>
 
+        </section>
+        
+        <!-- contact page -->
+        <section id="contact">
+            <h2>Contact us</h2>
+            <form action="">
+                <label for="email">Email Address</label>
+                <input id="email" type="text" name="email" placeholder="you@company.com" required>
+                <br>
+
+                <input type="radio" id="feedback" name="type" value="feedback" checked>
+                <label for="feedback">Feedback</label>
+
+                <input type="radio" id="business" name="type" value="business">
+                <label for="business">Business contact</label>
+                
+                <input type="radio" id="other" name="type" value="other">
+                <label for="other">Other</label>
+                <br>
+                <button type="submit">Submit</button>
+
+            </form>
         </section>
     </main>
     <footer>
