Minor grammar fixes

--- a/Aiden_Ghim_index.html
+++ b/Aiden_Ghim_index.html
@@ -41,7 +41,7 @@
         <section id="intro">
             <div id="motto">
                 <h1>Unlock stellar wonders.</h1>
-                <p id="motto_description">The wonders are up there. Unleash it with <span class="tm">Stellar Telescopes</span>.</p>
+                <p id="motto_description">The wonders are up there. Unleash them with <span class="tm">Stellar Telescopes</span>.</p>
             </div>
             <div id="advbox">
                 <img id="advimg" src="https://cdn.mos.cms.futurecdn.net/VtkGQvZhCU3M7qtRnriPNZ.jpg" alt="image of telescope and night sky">
